[package]
name = "isp3080-test"
version = "0.1.0"
edition = "2018"

[dependencies]
cortex-m-rt = "0.7.3"
dw3000-ng = "1.0.2"
embassy-executor = { version = "0.7.0", features = [ "arch-cortex-m", "executor-thread", "executor-interrupt", "defmt" ] }
embassy-futures = { version = "0.1.1", features = [ ] }
embassy-nrf = { version = "0.3.1", features = [ "defmt", "nrf52833", "unstable-pac", "time", "nfc-pins-as-gpio", "reset-pin-as-gpio" ] }
embassy-sync = { version = "0.6.2", features = [ "defmt" ] }
embassy-time = { version = "0.4.0", features = [ "defmt", "defmt-timestamp-uptime" ] }
embassy-usb = { version = "0.4.0", features = [ "defmt" ] }
embedded-hal = "1.0.0"
embedded-hal-async = "1.0.0"
nrf52833-hal = "0.18.0"
panic-semihosting = "0.6.0"
static_cell = "2.1.0"
